@@ -1,3 +1,8 @@
+2002-07-04  Ross Burton  <ross@burtonini.com>
+
+	* canfield.scm: canfield didn't know when the game was over. Also
+	fix a off-by-one in "deal-possible?". Closes #74185.
+
 2002-06-17  Bastien Nocera  <hadess@hadess.net>
 
 	* Makefile.am: install the desktop file in $(datadir)/applications
